<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@+id/com_post">

    <fragment
        android:id="@+id/com_post"
        android:name="com.vibro.care.Activity.fragment.company.ComPostFragment"
        android:label="@string/post"
        tools:layout="@layout/fragment_com_post" />

    <fragment
        android:id="@+id/com_active"
        android:name="com.vibro.care.Activity.fragment.company.ComActiveFragment"
        android:label="@string/active"
        tools:layout="@layout/fragment_com_active" />

    <fragment
        android:id="@+id/com_support"
        android:name="com.vibro.care.Activity.fragment.common.SupportFragment"
        android:label="@string/support"
        tools:layout="@layout/fragment_support" />

    <fragment
        android:id="@+id/com_shop"
        android:name="com.vibro.care.Activity.fragment.common.ShopFragment"
        android:label="@string/shop"
        tools:layout="@layout/fragment_shop" />
</navigation>
