<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.LoginActivity">

    <TextView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/colorBG"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginBottom="20dp"
        android:background="@mipmap/logo"
        app:layout_constraintBottom_toTopOf="@+id/chooser"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="ContentDescription" />

    <LinearLayout
        android:id="@+id/chooser"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Spinner
            android:id="@+id/inUserType"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginBottom="10dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inPhoneLay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">

            <EditText
                android:id="@+id/inPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/phone"
                android:inputType="phone"
                android:maxLength="10"
                android:text=""
                android:textColor="@color/colorAccent"
                android:textColorHint="@color/colorHint" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inPasswordLay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/colorAccent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/password"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:maxLength="10"
                android:text=""
                android:textColor="@color/colorAccent"
                android:textColorHint="@color/colorHint" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/inSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/button"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            android:textSize="18sp" />

        <TableRow
            android:id="@+id/tab"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center">

            <Button
                android:id="@+id/inForget"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginEnd="10dp"
                android:layout_weight=".75"
                android:background="@android:color/transparent"
                android:gravity="end|center_vertical"
                android:text="@string/forget"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimaryDark" />

            <TextView
                android:id="@+id/text"
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_margin="1dp"
                android:background="@color/colorPrimaryDark" />

            <Button
                android:id="@+id/inOTPLogin"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:gravity="start|center_vertical"
                android:text="@string/login_otp"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimaryDark" />
        </TableRow>

        <TextView
            android:id="@+id/inSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/signup"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@color/colorBG" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>